--- a/DOM/index.html
+++ b/DOM/index.html
@@ -16,7 +16,7 @@
             <div class="text">
                 <h2 id="tri">Triangle </h2>
                 <p>Area (A) = 0.5*b*h</p>
-                <div id="triinp" >
+                <div id="triinp">
                     <input type="text" id="tri1" class="inputbox">
                     <label for="">cm</label>
                     <input type="text" id="tri2" class="inputbox">
@@ -31,7 +31,7 @@
             <div class="text">
                 <h2>Rectangle </h2>
                 <p>Area (A) = W * l</p>
-                <div id="triinp" >
+                <div id="triinp">
                     <input type="text" id="rec1" class="inputbox">
                     <label for="">cm</label>
                     <input type="text" id="rec2" class="inputbox">
@@ -39,6 +39,7 @@
                 </div>
                 <button onclick="calculate('rectangle',rec1,rec2)" class="btn">Calculate</button>
             </div>
+
         </div>
         <div id="par" onmouseover="colorchange('par')" class="input">
             <img src="./ans_2/shape_pic/parallelogram.png" alt="">
@@ -51,7 +52,7 @@
                     <input type="text" id="par2" class="inputbox">
                     <label for="">cm</label>
                 </div>
-                <button onclick="calculate('Parallelogram',par1,par2)" class="btn">Calculate</button>
+                <button onclick="calculate('parallelogram',par1,par2)" class="btn">Calculate</button>
             </div>
 
         </div>
