--- a/DOM/index.html
+++ b/DOM/index.html
@@ -22,7 +22,7 @@
                     <input type="text" id="tri2" class="inputbox">
                     <label for="">cm</label>
                 </div>
-                <button onclick="calculate('triangle',tri1,tri2)" class="btn">Calculate</button>
+                <button onclick="calculate('Triangle',tri1,tri2)" class="btn">Calculate</button>
             </div>
 
         </div>
@@ -37,7 +37,7 @@
                     <input type="text" id="rec2" class="inputbox">
                     <label for="">cm</label>
                 </div>
-                <button onclick="calculate('rectangle',rec1,rec2)" class="btn">Calculate</button>
+                <button onclick="calculate('Rectangle',rec1,rec2)" class="btn">Calculate</button>
             </div>
 
         </div>
@@ -52,9 +52,8 @@
                     <input type="text" id="par2" class="inputbox">
                     <label for="">cm</label>
                 </div>
-                <button onclick="calculate('parallelogram',par1,par2)" class="btn">Calculate</button>
+                <button onclick="calculate('Parallelogram',par1,par2)" class="btn">Calculate</button>
             </div>
-
         </div>
         <div id="output">
             <h2 style="text-align: center;">Area calculation</h2>
